feat: improve user-role relationship